Fixed incompatibility with OpenSSH 7.0

BUG: 351725

Conflicts:
	plugins/sftp/mounter.cpp